# zephyr

./: MAINTAINERS.yml
arch/arm/core/cortex_m/: irq_manage.c
boards/phytec/phyboard_lyra/: phyboard_lyra_am6234_m4.dts  phyboard_lyra_am6234_m4_defconfig
drivers/mbox/: Kconfig  Kconfig.ti_omap
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.am62x_timer  pwm_am62x_timer.c
dts/arm/ti/: am62x_m4.dtsi
dts/arm64/ti/: ti_am62x_a53.dtsi
dts/bindings/mbox/: ti,omap-mailbox.yaml
dts/bindings/pwm/: ti,am62x-timer-pwm.yaml
lib/open-amp/: resource_table.c
samples/subsys/ipc/openamp_rsc_table/: CMakeLists.txt  prj.conf
samples/subsys/ipc/openamp_rsc_table/src/: main_remote.c
samples/subsys/ipc/openamp_rsc_table/src/pb_codec/: Makefile  high_to_low.pb.c  high_to_low.pb.h  high_to_low.proto  low_to_high.pb.c  low_to_high.pb.h  low_to_high.proto
samples/valeo_rpmsg/: CMakeLists.txt  prj.conf
samples/valeo_rpmsg/src/: main.c
soc/ti/k3/am6x/m4/: soc.c
